server-rs/test_output_compilation.txt
   Compiling server-rs v1.0.0 (C:\Users\Home Office_PC\.gemini\antigravity\playground\tadpole-os\server-rs)
error[E0425]: cannot find value `state` in this scope
  --> src\routes\agent_tests.rs:28:5
   |
28 |     state.agents.clear(); // Ensure clean state for tests
   |     ^^^^^ not found in this scope

warning: unused import: `tower::ServiceExt`
 --> src\routes\mcp_test.rs:7:9
  |
7 |     use tower::ServiceExt; // for `oneshot`
  |         ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `post`
 --> src\routes\agent_tests.rs:4:20
  |
4 |     routing::{get, post, put},
  |                    ^^^^

warning: unused import: `std::path::PathBuf`
 --> src\agent\mcp_tests.rs:6:9
  |
6 |     use std::path::PathBuf;
  |         ^^^^^^^^^^^^^^^^^^

warning: unused import: `futures::SinkExt`
  --> src\routes\ws_tests.rs:50:9
   |
50 |     use futures::SinkExt;
   |         ^^^^^^^^^^^^^^^^

warning: value assigned to `target_value` is never read
  --> src\agent\benchmarks.rs:65:28
   |
65 |     let mut target_value = None;
   |                            ^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `name` is never read
  --> src\agent\benchmarks.rs:66:20
   |
66 |     let mut name = "".to_string();
   |                    ^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: value assigned to `category` is never read
  --> src\agent\benchmarks.rs:67:24
   |
67 |     let mut category = "".to_string();
   |                        ^^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: variable does not need to be mutable
   --> src\routes\agent_tests.rs:116:10
    |
116 |     let (mut app, state) = test_app().await;
    |          ----^^^
    |          |
    |          help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\agent\runner\synthesis.rs:219:13
    |
219 |         let mut ctx = RunContext {
    |             ----^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:179:9
    |
179 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:309:9
    |
309 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:336:9
    |
336 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `usage`
   --> src\agent\runner\tools.rs:386:9
    |
386 |         usage: &mut Option<crate::agent::types::TokenUsage>,
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_usage`

warning: unused variable: `path_rs`
   --> src\utils\parser.rs:160:13
    |
160 |         let path_rs = path.with_extension("rs");
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_path_rs`

For more information about this error, try `rustc --explain E0425`.
warning: `server-rs` (bin "server-rs" test) generated 14 warnings
error: could not compile `server-rs` (bin "server-rs" test) due to 1 previous error; 14 warnings emitted
